# evo-augmented-llm

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: base.yaml  bit_memory.yaml  delayed_xor.yaml  event_decision.yaml  event_memory.yaml  key_value_memory.yaml  key_value_memory_easy.yaml  key_value_memory_full.yaml  key_value_memory_mid.yaml  key_value_memory_trivial.yaml  local.yaml  online.yaml  stateless.yaml  v11c_kv_conservative.yaml  v11c_kv_readout_boost.yaml  v11c_kv_selective.yaml  v11d_kv_conservative_plus.yaml  v12b_slots_querysharp.yaml  v12b_slots_readoutsharp.yaml  v12c_slots_focusplus.yaml  v12c_slots_readoutplus.yaml  v12d_slots_conservative_plus.yaml  v12d_slots_margin_plus.yaml  v13b_addressed_asym_init.yaml  v13b_addressed_asym_rw.yaml  v15q_delta.yaml  v16a_asym_source.yaml  v16b_no_cross.yaml  v16c_amp_magnitude.yaml  v16c_scale_up.yaml  v5a_clamp_025.yaml  v5a_clamp_050.yaml  v5a_clamp_100.yaml  v5a_clamp_200.yaml  v5a_eta_medium.yaml  v5a_eta_narrow.yaml  v5a_eta_wide.yaml  v5b1_ad.yaml  xor.yaml
results/: README.md  baseline-bit-memory-smoke.md  baseline-cross-label-check.md  baseline-delta-multiseed-search-space.md  baseline-delta-multiseed.md  baseline-delta-v2.md  baseline-kv-easy-smoke.md  benchmark_focus.md  fitness-landscape-baseline-delta-multiseed.md  fitness-landscape-v15f-delta.md  generation-suite-20260331T204909.517920+0000.md  generation-suite-20260401T125849.028433+0000.md  generation-suite-20260401T133408.190694+0000.md  pr1-delta-search-space.md  (+229 more)
(+92 files in other folders)
